# dbm-intern-ranking

./: .gitignore  LICENSE  README.md  nginx.conf  ranking-api.service  ranking.sql  relational-model.drawio
Template-graphical-app/src/: main.rs
actix-api/: .env  Cargo.toml
actix-api/src/: handlers.rs  main.rs  models.rs
api/: Cargo.toml  Rocket.toml
api/src/: db.rs  main.rs
dashboards/: Member specific.json  Ranking-Overview.json
dbm-intern-ranking-gui/: Cargo.toml  README.md
dbm-intern-ranking-gui/src/: main.rs
