[package]
name = "dbm-intern-ranking-gui"
version = "0.1.0"
edition = "2021"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.0"
egui = "0.27.0"
winapi = { version = "0.3", features = ["winuser"] }
catppuccin-egui = { version = "5.1", default-features = false, features = [
    "egui27",
] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
